p3/confs/server/cluster/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
